createAdmin APi and Get all Admin Api,s
